--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2003-12-14  bulia byak <bulia@dr.com>
+
+	* src/verbs.h src/verbs.c: changed 'offset' to 'outset' (more logical), added simplify
+	path command
+
+	* src/interface.c: added sp_key_name to make shortcuts more readable, added simplify
+	path command, regrouped commands more logically
+
+	* src/shortcuts.c: changed shortcuts for boolean ops, readability, minor cleanups
+
+	* src/inkscape.c: increased max length of recent documents list to 15, fixed trimming
+	the list
+
+	* src/seltrans.c: fixed crash when scaling very small objects at max zoom
+
 2003-12-12  MenTaLguY <mental@rydia.net>
 
 	* doc/Makefile.am, Makefile.am, configure.in: include doc/
