--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2003-12-17 Nathan Hurst <njh@csse.monash.edu.au>
 
+	* provided some initial though on how to do Points uniformly across inkscape.  geom.h
 	* partial currying of zoom menu
 	
 2003-12-17  MenTaLguY <mental@rydia.net>
