--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-18  Jon A. Cruz <jon@joncruz.org>
+
+	* src/widgets/sp-color-gtkselector.cpp: fix for 859131; Changed descriptive name of GTK+
+	selector.
+
 2003-12-18  MenTaLguY <mental@rydia.net>
 
 	* First steps towards making actions per-view
