--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-24  MenTaLguY <mental@rydia.net>
+
+	* src/object-ui.cpp: moved object-specific menuitems out onto the
+	  main context menu, instead of sequestered in their own submenus.
+
 2003-12-24  Alexander Clausen <alex@skip86.com>
 
 	* src/interface.cpp:
