--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-25  Daniel Borgmann <spark@mayl.de>
+
+	* src/interface.cpp src/verbs.cpp: Fixed a few more mnemonics (mostly
+	duplicates) and changed shortcut labels to use uppercase letters like the 
+	rest of the world. :-)
+
 2003-12-25  Alexander Clausen <alex@skip86.com>
 
 	* src/file.cpp src/main.cpp src/dialogs/export.cpp: Made error dialogs 
