--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-25  MenTaLguY <mental@rydia.net>
+
+	* src/desktop.cpp: changed g_sprintf to g_strdup_printf
+
 2003-12-25  Daniel Borgmann <spark@mayl.de>
 
 	* src/interface.cpp src/verbs.cpp: Fixed a few more mnemonics (mostly
