--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/dyna-draw-context.cpp (fit_and_split_calligraphics): Fix the
+	calculation of BEZIER_MAX_LENGTH.
+	Add assertions that the corresponding buffers haven't been overrun.
+
 2004-01-03  Ted Gould <ted@gould.cx>
 
 	* src/helper/bezier-utils.cpp, src/inkscape-stock.h:
