--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/xml/Makefile.am: Append $(EXEEXT) to executables in TESTS.
+
 	* src/verbs.cpp (sp_action_get_title): Get rid of fixed-sized buffer.
 
 	* src/nodepath.cpp: Miscellaneous cleanups including fixing
