--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-01-04  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/libnr/nr-types.h: operator[], operator+=, operator/=, unary operator-,
+	operator==, operator!=: new.  Remove methods L1,L2,Linfty, move them to
+	functions in nr-point-fns.{h,cpp}.  Rename Normalize to normalize with
+	more sophisticated non-inline implementation in nr-types.cpp.
+	* src/libnr/{nr-types.cpp,nr-point-fns.h,nr-point-fns.cpp}: new files.
+	* src/libnr/nr-types-test.cpp: new unit test file.
+	* src/libnr/Makefile.am: mention the new files.
+
 	* src/Makefile.am: Add `check-recursive: all-recursive' dependency
 	(and a comment with related discussion).
 
